--- a/dnscrypt/index.html
+++ b/dnscrypt/index.html
@@ -5,22 +5,25 @@
     <meta charset="utf-8">
     <title>DNSCrypt Proxy configuration</title>
     <style>
-        @charset "UTF-8";@import 'https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css'; pre code {padding: 0;font-size: inherit;color: inherit;white-space: pre-wrap;background-color: transparent;border-radius: 0;}
+        @charset "UTF-8";@import 'https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css'; body {max-width: 1080px;margin: auto;}pre code {padding: 0;font-size: inherit;color: inherit;white-space: pre-wrap;background-color: transparent;border-radius: 0;}
     </style>
 </head>
 
 <body id="preview">
-<h1><a id="DNSCrypt_Proxy_configuration_as_below_0"></a>DNSCrypt Proxy configuration as below:</h1>
+<h1><a id="No_logging__Block_Ads__Trackers__Malware_domains__DNSSEC_0"></a>No logging • Block Ads + Trackers + Malware domains • DNSSEC</h1>
 <h3><a id="Stamp_for_dnscryptproxy_2x_2"></a>Stamp for dnscrypt-proxy 2.x:</h3>
-<pre><code>sdns://AQcAAAAAAAAAEzEwMy43OC4yMDEuMTA3OjQ0MzQgY0QdrOiwBlPxfSu9fUJBumQXRvUkpOpQ5pIZr-lT_6EcMi5kbnNjcnlwdC1jZXJ0LmJyYWhtYS53b3JsZA
+<pre><code>sdns://AQcAAAAAAAAAEzEwMy43OC4yMDEuMTA3OjQ0MzQgEnC_fhRjYv3623xPSYs98VD6MoSaLL9dy0T0GTwjOpIcMi5kbnNjcnlwdC1jZXJ0LmJyYWhtYS53b3JsZA
 </code></pre>
 <h3><a id="Parameters_for_dnscryptproxy_1x_5"></a>Parameters for dnscrypt-proxy 1.x:</h3>
-<pre><code>dnscrypt-proxy  --provider-key=6344:1DAC:E8B0:0653:F17D:2BBD:7D42:41BA:6417:46F5:24A4:EA50:E692:19AF:E953:FFA1
+<pre><code>dnscrypt-proxy  --provider-key=1270:BF7E:1463:62FD:FADB:7C4F:498B:3DF1:50FA:3284:9A2C:BF5D:CB44:F419:3C23:3A92
                 --resolver-address=103.78.201.107:4434
                 --provider-name=2.dnscrypt-cert.brahma.world
 </code></pre>
-<h3><a id="Plain_unsecured_DNS_with_ad_blocking__parental_filter_11"></a>Plain unsecured DNS with ad blocking &amp; parental filter:</h3>
-<pre><code>106.51.128.78</code></pre>
+<h3><a id="Plain_unsecured_DNS_11"></a>Plain unsecured DNS:</h3>
+<pre><code>103.78.201.107
+</code></pre>
+<hr>
+<p>You can monitor the uptime at <a href="https://status.brahma.world/">https://status.brahma.world</a></p>
 </body>
 
 </html>
