Added DNS over HTTPS

--- a/dnscrypt/index.html
+++ b/dnscrypt/index.html
@@ -11,16 +11,26 @@
 
 <body id="preview">
 <h1><a id="No_logging__Block_Ads__Trackers__Malware_domains__DNSSEC_0"></a>No logging • Block Ads + Trackers + Malware domains • DNSSEC</h1>
-<h3><a id="Stamp_for_dnscryptproxy_2x_2"></a>Stamp for dnscrypt-proxy 2.x:</h3>
-<pre><code>sdns://AQMAAAAAAAAAEzEwMy43OC4yMDEuMTA3OjQ0MzQgEnC_fhRjYv3623xPSYs98VD6MoSaLL9dy0T0GTwjOpIcMi5kbnNjcnlwdC1jZXJ0LmJyYWhtYS53b3JsZA
+<hr>
+<h2><a id="DNSCrypt_2"></a>DNSCrypt</h2>
+<h3><a id="Stamp_for_dnscryptproxy_2x_3"></a>Stamp for dnscrypt-proxy 2.x:</h3>
+<pre><code>sdns://AQcAAAAAAAAAEzEwMy43OC4yMDEuMTA3OjQ0MzQgY0QdrOiwBlPxfSu9fUJBumQXRvUkpOpQ5pIZr-lT_6EcMi5kbnNjcnlwdC1jZXJ0LmJyYWhtYS53b3JsZA
 </code></pre>
-<h3><a id="Parameters_for_dnscryptproxy_1x_5"></a>Parameters for dnscrypt-proxy 1.x:</h3>
-<pre><code>dnscrypt-proxy  --provider-key=1270:BF7E:1463:62FD:FADB:7C4F:498B:3DF1:50FA:3284:9A2C:BF5D:CB44:F419:3C23:3A92
+<h3><a id="Parameters_for_dnscryptproxy_1x_6"></a>Parameters for dnscrypt-proxy 1.x:</h3>
+<pre><code>dnscrypt-proxy  --provider-key=6344:1DAC:E8B0:0653:F17D:2BBD:7D42:41BA:6417:46F5:24A4:EA50:E692:19AF:E953:FFA1
                 --resolver-address=103.78.201.107:4434
                 --provider-name=2.dnscrypt-cert.brahma.world
 </code></pre>
-<h3><a id="Plain_unsecured_DNS_11"></a>Plain unsecured DNS:</h3>
+<h3><a id="Plain_unsecured_DNS_12"></a>Plain unsecured DNS:</h3>
 <pre><code>103.78.201.107
+</code></pre>
+<hr>
+<h2><a id="DNS_over_HTTPS_15"></a>DNS over HTTPS</h2>
+<h3><a id="Stamp_for_DNS_over_HTTPS_16"></a>Stamp for DNS over HTTPS</h3>
+<pre><code>sdns://AgMAAAAAAAAAAAAVZG5zY3J5cHQuYnJhaG1hLndvcmxkCi9kbnMtcXVlcnk
+</code></pre>
+<h3><a id="URL_for_DNS_over_HTTPS_18"></a>URL for DNS over HTTPS</h3>
+<pre><code>https://dnscrypt.brahma.world/dns-query
 </code></pre>
 <hr>
 <p>You can monitor the uptime at <a href="https://status.brahma.world/">https://status.brahma.world</a></p>
