Move unsecured DNS to separate section

--- a/dnscrypt/index.html
+++ b/dnscrypt/index.html
@@ -21,16 +21,18 @@
                 --resolver-address=103.78.201.107:4434
                 --provider-name=2.dnscrypt-cert.brahma.world
 </code></pre>
-<h3><a id="Plain_unsecured_DNS_12"></a>Plain unsecured DNS:</h3>
-<pre><code>103.78.201.107
-</code></pre>
 <hr>
-<h2><a id="DNS_over_HTTPS_15"></a>DNS over HTTPS</h2>
-<h3><a id="Stamp_for_DNS_over_HTTPS_16"></a>Stamp for DNS over HTTPS</h3>
+<h2><a id="DNS_over_HTTPS_13"></a>DNS over HTTPS</h2>
+<h3><a id="Stamp_for_DNS_over_HTTPS_14"></a>Stamp for DNS over HTTPS</h3>
 <pre><code>sdns://AgMAAAAAAAAAAAAVZG5zY3J5cHQuYnJhaG1hLndvcmxkCi9kbnMtcXVlcnk
 </code></pre>
-<h3><a id="URL_for_DNS_over_HTTPS_18"></a>URL for DNS over HTTPS</h3>
+<h3><a id="URL_for_DNS_over_HTTPS_16"></a>URL for DNS over HTTPS</h3>
 <pre><code>https://dnscrypt.brahma.world/dns-query
+</code></pre>
+<hr>
+<h2><a id="Plain_unsecured_DNS_19"></a>Plain unsecured DNS</h2>
+<h3><a id="IP_for_DNS_Server_20"></a>IP for DNS Server:</h3>
+<pre><code>103.78.201.107
 </code></pre>
 <hr>
 <p>You can monitor the uptime at <a href="https://status.brahma.world/">https://status.brahma.world</a></p>
