--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     </head>
     
     <body>
-	   <a rel="me" style="position:absolute;left:-500px" href="https://mastodon.social/@brahmadev">Mastodon</a>
+	   <a rel="me" style="position:absolute;left:-500px" href="https://mstdn.social/@brahmadev">Mastodon</a>
     
     <div id='instructions'>
         How to play:
