--- a/clock.html
+++ b/clock.html
@@ -1,6 +1,16 @@
-<!doctype html><html><head></head><body><div id="time">
+<!doctype html><html><head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+  <style type="text/css">
+#time{
+  font-family: 'Oleo Script Swash Caps', cursive, Arial,Helvetica,sans-serif;
+  font-weight: 700;
+  font-size: 8rem; line-height: 8rem; margin:auto;
+}</style></head><body>
+<time id="time">
 
-</div><script type="text/javascript">(function () {
+</time><script type="text/javascript">(function () {
 
   const el = document.getElementById("time");
   const rmsperday = (24 * 60 * 60000);
