--- a/clock.html
+++ b/clock.html
@@ -1,28 +1,120 @@
-<!doctype html><html><head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
-  <style type="text/css">
-#time{
-  font-family: 'Oleo Script Swash Caps', cursive, Arial,Helvetica,sans-serif;
-  font-weight: 700;
-  font-size: 8rem; line-height: 8rem; margin:auto;
-}</style></head><body>
-<time id="time">
+<!DOCTYPE html>
+<html>
+<body>
 
-</time><script type="text/javascript">(function () {
+<canvas id="canvas" width="400" height="400"
+style="background-color:#333">
+</canvas>
 
-  const el = document.getElementById("time");
+<script>
+var canvas = document.getElementById("canvas");
+var ctx = canvas.getContext("2d");
+var radius = canvas.height / 2;
+ctx.translate(radius, radius);
+radius = radius * 0.90;
   const rmsperday = (24 * 60 * 60000);
   const newsecratio = (32 * 64 * 64) / (24 * 60 * 60);
-  setInterval(() => {
-    let t = new Date().getTime();
-    let d = t % rmsperday;
+  const localoffset = -60000 * (new Date()).getTimezoneOffset();
+setInterval(drawClock,  (24 * 60 * 60000) / (5 * 32 * 64 * 64));
+
+function drawClock() {
+  drawFace(ctx, radius);
+  drawNumbers(ctx, radius);
+  drawTime(ctx, radius);
+}
+
+function drawFace(ctx, radius) {
+  var grad;
+  ctx.beginPath();
+  ctx.arc(0, 0, radius, 0, 2*Math.PI);
+  ctx.fillStyle = 'white';
+  ctx.fill();
+  grad = ctx.createRadialGradient(0,0,radius*0.95, 0,0,radius*1.05);
+  grad.addColorStop(0, '#333');
+  grad.addColorStop(0.5, 'white');
+  grad.addColorStop(1, '#333');
+  ctx.strokeStyle = grad;
+  ctx.lineWidth = radius*0.1;
+  ctx.stroke();
+  ctx.beginPath();
+  ctx.arc(0, 0, radius*0.1, 0, 2*Math.PI);
+  ctx.fillStyle = '#333';
+  ctx.fill();
+}
+
+function drawNumbers(ctx, radius) {
+  var ang;
+  var num;
+  ctx.font = radius*0.10 + "px arial";
+  ctx.textBaseline="middle";
+  ctx.textAlign="center";
+  for(num = 1; num < 33; num++){
+    ang = num * Math.PI / 16;
+    ctx.rotate(ang);
+    ctx.translate(0, -radius*0.85);
+    ctx.rotate(-ang);
+    ctx.fillText(num.toString(), 0, 0);
+    ctx.rotate(ang);
+    ctx.translate(0, radius*0.85);
+    ctx.rotate(-ang);
+  }
+}
+
+function drawTime0(ctx, radius){
+    var now = new Date();
+    var hour = now.getHours();
+    var minute = now.getMinutes();
+    var second = now.getSeconds();
+    //hour
+    hour=hour;
+    hour=(hour*Math.PI/16)+
+    (minute*Math.PI/(16*64))+
+    (second*Math.PI/(360*64));
+    drawHand(ctx, hour, radius*0.5, radius*0.07);
+    //minute
+    minute=(minute*Math.PI/30)+(second*Math.PI/(30*60));
+    drawHand(ctx, minute, radius*0.8, radius*0.07);
+    // second
+    second=(second*Math.PI/30);
+    drawHand(ctx, second, radius*0.9, radius*0.02);
+}
+
+function drawHand(ctx, pos, length, width) {
+    ctx.beginPath();
+    ctx.lineWidth = width;
+    ctx.lineCap = "round";
+    ctx.moveTo(0,0);
+    ctx.rotate(pos);
+    ctx.lineTo(0, -length);
+    ctx.stroke();
+    ctx.rotate(-pos);
+}
+
+
+function drawTime(ctx, radius){
+    var now = (new Date().getTime())+localoffset;
+    let d = now % rmsperday;
     d *= newsecratio;
-    let hrs = Math.floor(d / (64 * 64000));
+    var hour = Math.floor(d / (64 * 64000));
     d = d % (64 * 64000);
-    let min = Math.floor(d / (64000));
+    var minute = Math.floor(d / (64000));
     d = d % (64000);
-    el.innerText = String(hrs).padStart(2, "0") + ":" + String(min).padStart(2, "0") + ":" + String(Math.floor(d / 1000)).padStart(2, "0");
-  }, (24 * 60 * 60000) / (5 * 32 * 64 * 64))
-})();</script></body><html>
+    var second = Math.floor(d / 1000);
+    //hour
+    hour=hour;
+    hour=(hour*Math.PI/16)+
+    (minute*Math.PI/(16*64))+
+    (second*Math.PI/(360*64));
+    drawHand(ctx, hour, radius*0.5, radius*0.07);
+    //minute
+    minute=(minute*Math.PI/32)+(second*Math.PI/(32*60));
+    drawHand(ctx, minute, radius*0.8, radius*0.07);
+    // second
+    second=(second*Math.PI/32);
+    drawHand(ctx, second, radius*0.9, radius*0.02);
+}
+
+</script>
+
+</body>
+</html>
