--- a/clock.html
+++ b/clock.html
@@ -15,7 +15,7 @@ radius = radius * 0.90;
   const rmsperday = (24 * 60 * 60000);
   const newsecratio = (32 * 64 * 64) / (24 * 60 * 60);
   const localoffset = -60000 * (new Date()).getTimezoneOffset();
-setInterval(drawClock,  (24 * 60 * 60000) / (5 * 32 * 64 * 64));
+setInterval(drawClock,  (24 * 60 * 60000) / (32 * 32 * 64 * 64));
 
 function drawClock() {
   drawFace(ctx, radius);
@@ -99,7 +99,7 @@ function drawTime(ctx, radius){
     d = d % (64 * 64000);
     var minute = Math.floor(d / (64000));
     d = d % (64000);
-    var second = Math.floor(d / 1000);
+    var second = d / 1000;
     //hour
     hour=hour;
     hour=(hour*Math.PI/16)+
