--- a/clock.html
+++ b/clock.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:#333">
+<body style="background-color:#FFF">
 
-<canvas id="canvas" width="400" height="400"
-style="background-color:#333; display:block; margin:auto">
+<canvas id="canvas" width="960" height="960"
+style="background-color:#FFF; display:block; margin:auto;transform: scale(0.5);transform-origin: top center;">
 </canvas>
 
 <script>
